Bug 81021 - [CSSRegions]NamedFlow::getRegionsByContentNode should not return a live NodeList
Summary: [CSSRegions]NamedFlow::getRegionsByContentNode should not return a live NodeList
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mihnea Ovidenie
URL:
Keywords:
Depends on:
Blocks: 80900
  Show dependency treegraph
 
Reported: 2012-03-13 12:20 PDT by Mihnea Ovidenie
Modified: 2012-03-13 18:26 PDT (History)
4 users (show)

See Also:


Attachments
Patch (87.34 KB, patch)
2012-03-13 12:46 PDT, Mihnea Ovidenie
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mihnea Ovidenie 2012-03-13 12:20:22 PDT
Making the NamedFlow::getRegionsByContentNode return a live NodeList of regions is difficult and error prone. It also prevents refactoring like in https://bugs.webkit.org/show_bug.cgi?id=80900. I am reverting the original patch for https://bugs.webkit.org/show_bug.cgi?id=77746.
Comment 1 Mihnea Ovidenie 2012-03-13 12:46:15 PDT
Created attachment 131696 [details]
Patch
Comment 2 WebKit Review Bot 2012-03-13 16:43:26 PDT
Comment on attachment 131696 [details]
Patch

Clearing flags on attachment: 131696

Committed r110639: <http://trac.webkit.org/changeset/110639>
Comment 3 WebKit Review Bot 2012-03-13 16:43:30 PDT
All reviewed patches have been landed.  Closing bug.