[CSSRegions]NamedFlow::getRegionsByContentNode should not return a live NodeList https://bugs.webkit.org/show_bug.cgi?id=81021

Reviewed by Ryosuke Niwa.

Reverting the original patch as we need a better solution.

Source/WebCore:

* CMakeLists.txt:
* GNUmakefile.list.am:
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* dom/Node.cpp:
(WebCore::NodeListsNodeData::invalidateCaches):
(WebCore::NodeListsNodeData::isEmpty):
* dom/Node.h:
(Node):
* dom/NodeRareData.h:
(NodeListsNodeData):
* dom/RegionNodeList.cpp: Removed.
* dom/RegionNodeList.h: Removed.
* dom/WebKitNamedFlow.cpp:
* dom/WebKitNamedFlow.h:
(WebKitNamedFlow):
* dom/WebKitNamedFlow.idl:
* rendering/RenderFlowThread.cpp:
* rendering/RenderFlowThread.h:
* rendering/RenderRegion.h:
(RenderRegion):

LayoutTests:

* fast/regions/get-regions-by-content-node-expected.txt: Removed.
* fast/regions/get-regions-by-content-node-horiz-bt-expected.txt: Removed.
* fast/regions/get-regions-by-content-node-horiz-bt.html: Removed.
* fast/regions/get-regions-by-content-node-horiz-tb-expected.txt: Removed.
* fast/regions/get-regions-by-content-node-horiz-tb.html: Removed.
* fast/regions/get-regions-by-content-node-vert-lr-expected.txt: Removed.
* fast/regions/get-regions-by-content-node-vert-lr.html: Removed.
* fast/regions/get-regions-by-content-node-vert-rl-expected.txt: Removed.
* fast/regions/get-regions-by-content-node-vert-rl.html: Removed.
* fast/regions/get-regions-by-content-node.html: Removed.
* fast/regions/get-regions-by-content-node2-expected.txt: Removed.
* fast/regions/get-regions-by-content-node2.html: Removed.


Canonical link: https://commits.webkit.org/98215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110639 268f45cc-cd09-0410-ab3c-d52691b4dbfc