Source/WebCore/dom/WebKitNamedFlow.h
@@ -35,8 +35,6 @@
 
 namespace WebCore {
 
-class Node;
-class NodeList;
 class RenderFlowThread;
 
 class WebKitNamedFlow : public RefCounted<WebKitNamedFlow> {
@@ -49,7 +47,6 @@ public:
     ~WebKitNamedFlow();
 
     bool overflow() const;
-    PassRefPtr<NodeList> getRegionsByContentNode(Node*);
 
 private:
     WebKitNamedFlow(RenderFlowThread*);
