Source/WebCore/rendering/RenderFlowThread.h
@@ -137,9 +137,6 @@ public:
 
     bool overflow() const { return m_overflow; }
 
-    // Check if the object is in region and the region is part of this flow thread.
-    bool objectInFlowRegion(const RenderObject*, const RenderRegion*) const;
-
 private:
     virtual const char* renderName() const { return "RenderFlowThread"; }
 
@@ -149,8 +146,6 @@ private:
     void checkInvalidRegions();
 
     bool shouldRepaint(const LayoutRect&) const;
-
-    bool regionInRange(const RenderRegion* targetRegion, const RenderRegion* startRegion, const RenderRegion* endRegion) const;
 
     typedef ListHashSet<RenderObject*> FlowThreadChildList;
     FlowThreadChildList m_flowThreadChildList;
